--- a/src/index.html
+++ b/src/index.html
@@ -5,24 +5,43 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="scss/style.scss" />
   </head>
   <body>
     <div class="container">
-      <h1>Index.html</h1>
-      <a href="about.html">About.html</a>
-
-      <form>
-        <div>
-          <label for=""> Name</label>
-          <input type="text" />
+      <header class="header">
+        <!-- menu  -->
+        <div class="top-menu">
+          <div class="top-menu__left">
+            <p class="top-menu__left__large"></p>
+            <p class="top-menu__left__small"></p>
+            <p class="top-menu__left__medium"></p>
+          </div>
+          <div class="top-menu__logo">
+            <img src="svg/fodry.svg" class="top-menu__logo__img">
+          </div>
+          <div class="top-menu__right">
+            <img src="svg/search.svg" class="top-menu__right__img top-menu__right__img_padding">
+            <img src="svg/bag.svg" class="top-menu__right__img">
+          </div>
         </div>
-        <div><button>Click me</button></div>
-      </form>
-    </div>
+      </header>
 
-    <!--  JavaScript here -->
-    <!-- <script src="js/app.js"></script> -->
-    <script src="js/script.js"></script>
+      <main class="main">
+        <div class="deals">
+          <div class="deals__first-p">
+            <p>don't miss today's featured deals</p>
+          </div>
+          <div class="deals__h1">
+            <h1>Best Burger  & Delicious</h1>
+          </div>
+          <div class="deals__second-p">
+            <p>Here to bring your life style to the next level.</p>
+          </div>
+        </div>
+      </main>
+      
+    </div>
+    <script src="js/app.js"></script>
   </body>
 </html>
