add advantages 320px

--- a/src/index.html
+++ b/src/index.html
@@ -22,22 +22,69 @@
           </div>
           <div class="top-menu__right">
             <img src="svg/search.svg" class="top-menu__right__img top-menu__right__img_padding">
-            <img src="svg/bag.svg" class="top-menu__right__img">
+            <img src="svg/bag.svg" class="top-menu__right__img top-menu__right__img_position">
+            <span class="top-menu__right_zero">0</span>
           </div>
         </div>
       </header>
 
       <main class="main">
+        <!-- deals -->
         <div class="deals">
           <div class="deals__first-p">
-            <p>don't miss today's featured deals</p>
+            <p class="deals__text">don't miss today's featured deals</p>
           </div>
           <div class="deals__h1">
-            <h1>Best Burger  & Delicious</h1>
+            <h1 class="deals__text">Best Burger  & Delicious</h1>
           </div>
           <div class="deals__second-p">
-            <p>Here to bring your life style to the next level.</p>
+            <p class="deals__text">Here to bring your life style to the next level.</p>
           </div>
+          <button class="deals__btn"><a class="deals__btn__text" href="#">shop now</a></button>
+        </div>
+
+        <!-- advatages -->
+        <div class="advantages">
+          <div class="advantages__first flex">
+            <figure class="advantages__img">
+              <img src="i/advantage_car.png" class="advantages__img_car img-fluid">
+            </figure>
+            <figcaption class="advantages__info flex">
+              <h2 class="advantages__info__h2">shipping & return</h2>
+              <p class="advantages__info__p">If your glasses aren't perfect, return them within 30 days for a full refund. We'll even pay shipping.</p>
+            </figcaption>
+          </div>
+
+          <div class="advantages__second flex">
+            <figure class="advantages__img">
+              <img src="i/advantage_box.png" class="advantages__img_box img-fluid">
+            </figure>
+            <figcaption class="advantages__info flex">
+              <h2 class="advantages__info__h2">safe payment</h2>
+              <p class="advantages__info__p">Pay with the world's most popular and secure payment methods.</p>
+            </figcaption>
+          </div>
+
+          <div class="advantages__third flex">
+            <figure class="advantages__img">
+              <img src="i/advantage_person.png" class="advantages__img_person img-fluid">
+            </figure>
+            <figcaption class="advantages__info flex">
+              <h2 class="advantages__info__h2">shop with confidence</h2>
+              <p class="advantages__info__p">Our Buyer Protection covers your purchase from click to delivery.</p>
+            </figcaption>
+          </div>
+        </div>
+
+        <!-- blocks with foto -->
+        <div class="foto">
+          <h2 class="foto__h2">Good price combos</h2>
+          <button class="foto__btn">shop now</button>
+        </div>
+
+        <div class="foto">
+          <h2 class="foto__h2">COllection Pizza</h2>
+          <button class="foto__btn">shop now</button>
         </div>
       </main>
       
