add foto and arrives

--- a/src/index.html
+++ b/src/index.html
@@ -78,13 +78,25 @@
 
         <!-- blocks with foto -->
         <div class="foto">
-          <h2 class="foto__h2">Good price combos</h2>
-          <button class="foto__btn">shop now</button>
+          <div class="foto__first">
+            <h2 class="foto__first__h2">Good price combos</h2>
+            <button class="foto__first__btn">shop now</button>
+          </div>
+  
+          <div class="foto__second">
+            <h2 class="foto__second__h2">COllection Pizza</h2>
+            <button class="foto__second__btn">shop now</button>
+          </div>
         </div>
 
-        <div class="foto">
-          <h2 class="foto__h2">COllection Pizza</h2>
-          <button class="foto__btn">shop now</button>
+        <div class="new-arrives">
+          <h2 class="new-arrives__h2">New Arrives</h2>
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+            <div>4</div>
+            <div>5</div>
+            <div>6</div>
         </div>
       </main>
       
