--- a/src/index.html
+++ b/src/index.html
@@ -142,7 +142,7 @@
                 <div class="new-arrives__product__second__figure_sale">
                   <span>Sale</span>
                 </div>
-                <div class="new-arrives__product__second_figure__time">
+                <div class="new-arrives__product__second__figure__time">
                   <ul class="new-arrives__product__second__figure__time__ul">
                     
                       <li class="new-arrives__product__second__figure__time__ul_li">
@@ -191,7 +191,17 @@
             <div class="new-arrives__product close">3</div>
             <div class="new-arrives__product close">4</div>
             <div class="new-arrives__product close">5</div>
-        </div>
+          </div>
+
+          <div class="veggie-pizza">
+            <div class="veggie-pizza__shop-block">
+              <h2 class="veggie-pizza__shop-block__h2">veggie pizza</h2>
+              <p class="veggie-pizza__shop-block__p">collection new</p>
+              <button class="veggie-pizza__shop-block__btn">
+                <p class="veggie-pizza__shop-block__btn_shop-now">shop now</p>
+              </button>
+            </div>
+          </div>
       </main>
       
     </div>
