worked with grid

--- a/src/index.html
+++ b/src/index.html
@@ -192,7 +192,7 @@
             <div class="new-arrives__product close">4</div>
             <div class="new-arrives__product close">5</div>
           </div>
-
+          <!-- veggie pizza -->
           <div class="veggie-pizza">
             <div class="veggie-pizza__shop-block">
               <h2 class="veggie-pizza__shop-block__h2">veggie pizza</h2>
@@ -201,6 +201,123 @@
                 <p class="veggie-pizza__shop-block__btn_shop-now">shop now</p>
               </button>
             </div>
+          </div>
+
+          <!-- propose -->
+          <div class="propose">
+            <h2 class="propose__h2">New Product</h2>
+            <!-- first -->
+            <figure class="propose__figure__first">
+              <img class="propose__figure__first_img" src="i/pizza-first.jpg" alt="">
+              <figcaption class="propose__figcaption__first">
+                <div class="propose__figcaption__first__name-box">
+                  <a class="propose__figcaption__first__name-box_a" href="#">French fries</a>
+                </div>
+                <p class="propose__figcaption__first__p">
+                  <span class="propose__figcaption__first__p_price">$18.00</span>
+                  <span class="propose__figcaption__first__p_price-old">$19.00</span>
+                </p>
+              </figcaption>
+            </figure>
+
+            <!-- second -->
+            <figure class="propose__figure__second">
+              <img class="propose__figure__second_img" src="i/pizza-first.jpg" alt="">
+              <figcaption class="propose__figcaption__second">
+                <div class="propose__figcaption__second__name-box">
+                  <a class="propose__figcaption__second__name-box_a" href="#">French fries</a>
+                </div>
+                <p class="propose__figcaption__second__p">
+                  <span class="propose__figcaption__second__p_price">$18.00</span>
+                  <span class="propose__figcaption__second__p_price-old">$19.00</span>
+                </p>
+              </figcaption>
+            </figure>
+
+            <!-- third -->
+            <figure class="propose__figure__third">
+              <img class="propose__figure__third_img" src="i/pizza-first.jpg" alt="">
+              <figcaption class="propose__figcaption__third">
+                <div class="propose__figcaption__third__name-box">
+                  <a class="propose__figcaption__third__name-box_a" href="#">French fries</a>
+                </div>
+                <p class="propose__figcaption__third__p">
+                  <span class="propose__figcaption__third__p_price">$18.00</span>
+                  <span class="propose__figcaption__third__p_price-old">$19.00</span>
+                </p>
+              </figcaption>
+            </figure>
+
+            <!-- fourth -->
+
+            <figure class="propose__figure__fourth">
+              <img class="propose__figure__fourth_img" src="i/pizza-first.jpg" alt="">
+              <figcaption class="propose__figcaption__fourth">
+                <div class="propose__figcaption__fourth__name-box">
+                  <a class="propose__figcaption__fourth__name-box_a" href="#">French fries</a>
+                </div>
+                <p class="propose__figcaption__fourth__p">
+                  <span class="propose__figcaption__fourth__p_price">$18.00</span>
+                  <span class="propose__figcaption__fourth__p_price-old">$19.00</span>
+                </p>
+              </figcaption>
+            </figure>
+
+            <!-- fifth -->
+            <figure class="propose__figure__fifth">
+              <img class="propose__figure__fifth_img" src="i/pizza-first.jpg" alt="">
+              <figcaption class="propose__figcaption__fifth">
+                <div class="propose__figcaption__fifth__name-box">
+                  <a class="propose__figcaption__fifth__name-box_a" href="#">French fries</a>
+                </div>
+                <p class="propose__figcaption__fifth__p">
+                  <span class="propose__figcaption__fifth__p_price">$18.00</span>
+                  <span class="propose__figcaption__fifth__p_price-old">$19.00</span>
+                </p>
+              </figcaption>
+            </figure>
+
+            <!-- sixth -->
+            <figure class="propose__figure__sixth">
+              <img class="propose__figure__sixth_img" src="i/pizza-first.jpg" alt="">
+              <figcaption class="propose__figcaption__sixth">
+                <div class="propose__figcaption__sixth__name-box">
+                  <a class="propose__figcaption__sixth__name-box_a" href="#">French fries</a>
+                </div>
+                <p class="propose__figcaption__sixth__p">
+                  <span class="propose__figcaption__sixth__p_price">$18.00</span>
+                  <span class="propose__figcaption__sixth__p_price-old">$19.00</span>
+                </p>
+              </figcaption>
+            </figure>
+
+            <!-- seventh -->
+            <figure class="propose__figure__seventh">
+              <img class="propose__figure__seventh_img" src="i/pizza-first.jpg" alt="">
+              <figcaption class="propose__figcaption__seventh">
+                <div class="propose__figcaption__seventh__name-box">
+                  <a class="propose__figcaption__seventh__name-box_a" href="#">French fries</a>
+                </div>
+                <p class="propose__figcaption__seventh__p">
+                  <span class="propose__figcaption__seventh__p_price">$18.00</span>
+                  <span class="propose__figcaption__seventh__p_price-old">$19.00</span>
+                </p>
+              </figcaption>
+            </figure>
+
+            <!-- eight -->
+            <figure class="propose__figure__eight">
+              <img class="propose__figure__eight_img" src="i/pizza-first.jpg" alt="">
+              <figcaption class="propose__figcaption__eight">
+                <div class="propose__figcaption__eight__name-box">
+                  <a class="propose__figcaption__eight__name-box_a" href="#">French fries</a>
+                </div>
+                <p class="propose__figcaption__eight__p">
+                  <span class="propose__figcaption__eight__p_price">$18.00</span>
+                  <span class="propose__figcaption__eight__p_price-old">$19.00</span>
+                </p>
+              </figcaption>
+            </figure>
           </div>
       </main>
       
