--- a/src/index.html
+++ b/src/index.html
@@ -215,7 +215,6 @@
                 </div>
                 <p class="propose__figcaption__first__p">
                   <span class="propose__figcaption__first__p_price">$18.00</span>
-                  <span class="propose__figcaption__first__p_price-old">$19.00</span>
                 </p>
               </figcaption>
             </figure>
@@ -228,8 +227,8 @@
                   <a class="propose__figcaption__second__name-box_a" href="#">French fries</a>
                 </div>
                 <p class="propose__figcaption__second__p">
-                  <span class="propose__figcaption__second__p_price">$18.00</span>
                   <span class="propose__figcaption__second__p_price-old">$19.00</span>
+                  <span class="propose__figcaption__second__p_price">$18.00</span>
                 </p>
               </figcaption>
             </figure>
@@ -243,7 +242,6 @@
                 </div>
                 <p class="propose__figcaption__third__p">
                   <span class="propose__figcaption__third__p_price">$18.00</span>
-                  <span class="propose__figcaption__third__p_price-old">$19.00</span>
                 </p>
               </figcaption>
             </figure>
@@ -258,7 +256,6 @@
                 </div>
                 <p class="propose__figcaption__fourth__p">
                   <span class="propose__figcaption__fourth__p_price">$18.00</span>
-                  <span class="propose__figcaption__fourth__p_price-old">$19.00</span>
                 </p>
               </figcaption>
             </figure>
@@ -272,7 +269,6 @@
                 </div>
                 <p class="propose__figcaption__fifth__p">
                   <span class="propose__figcaption__fifth__p_price">$18.00</span>
-                  <span class="propose__figcaption__fifth__p_price-old">$19.00</span>
                 </p>
               </figcaption>
             </figure>
@@ -285,8 +281,8 @@
                   <a class="propose__figcaption__sixth__name-box_a" href="#">French fries</a>
                 </div>
                 <p class="propose__figcaption__sixth__p">
-                  <span class="propose__figcaption__sixth__p_price">$18.00</span>
                   <span class="propose__figcaption__sixth__p_price-old">$19.00</span>
+                  <span class="propose__figcaption__sixth__p_price">$18.00</span>
                 </p>
               </figcaption>
             </figure>
@@ -300,7 +296,6 @@
                 </div>
                 <p class="propose__figcaption__seventh__p">
                   <span class="propose__figcaption__seventh__p_price">$18.00</span>
-                  <span class="propose__figcaption__seventh__p_price-old">$19.00</span>
                 </p>
               </figcaption>
             </figure>
@@ -314,10 +309,55 @@
                 </div>
                 <p class="propose__figcaption__eight__p">
                   <span class="propose__figcaption__eight__p_price">$18.00</span>
-                  <span class="propose__figcaption__eight__p_price-old">$19.00</span>
                 </p>
               </figcaption>
             </figure>
+          </div>
+
+          <div class="instagram">
+            <h2 class="instagram__h2">Instagram</h2>
+            <div class="instagram__box-img">
+              <img class="instagram__box-img_i" src="i/instagram1.jpg" alt="">
+            </div>
+            <div class="instagram__box-img">
+              <img class="instagram__box-img_i" src="i/instagram2.jpg" alt="">
+            </div>
+            <div class="instagram__box-img">
+              <img class="instagram__box-img_i" src="i/instagram3.jpg" alt="">
+            </div>
+
+            <div class="instagram__box-img">
+              <img class="instagram__box-img_i" src="i/instagram4.jpg" alt="">
+            </div>
+            <div class="instagram__box-img">
+              <img class="instagram__box-img_i" src="i/instagram5.jpg" alt="">
+            </div>
+            <div class="instagram__box-img">
+              <img class="instagram__box-img_i" src="i/instagram6.jpg" alt="">
+            </div>
+
+            <div class="instagram__box-img">
+              <img class="instagram__box-img_i" src="i/instagram7.jpg" alt="">
+            </div>
+            <div class="instagram__box-img">
+              <img class="instagram__box-img_i" src="i/instagram8.jpg" alt="">
+            </div>
+            <div class="instagram__box-img">
+              <img class="instagram__box-img_i" src="i/instagram9.jpg" alt="">
+            </div>
+
+            <div class="instagram__box-img">
+              <img class="instagram__box-img_i" src="i/instagram10.jpg" alt="">
+            </div>
+
+
+
+
+
+
+
+
+           
           </div>
       </main>
       
