--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="scss/style.scss" />
   </head>
   <body>
@@ -349,17 +350,55 @@
             <div class="instagram__box-img">
               <img class="instagram__box-img_i" src="i/instagram10.jpg" alt="">
             </div>
-
-
-
-
-
-
-
-
-           
           </div>
       </main>
+
+      <footer class="footer">
+        <div class="footer__logo">
+          <img src="svg/fodry.svg" alt="">
+        </div>
+
+        <div class="footer__logo__info">
+          <p class="footer__logo__info_p">Sophisticated simplicity for the independent mind.</p>
+        </div>
+
+        <div class="footer__social">
+          <div class="footer__social_twitter">
+            <i class="fa-brands fa-twitter"></i>
+          </div>
+          <div class="footer__social_dribble">
+            <i class="fa-brands fa-dribbble"></i>
+          </div>
+          <div class="footer__social_be">
+            <i class="fa-brands fa-behance"></i>
+          </div>
+          <div class="footer__social_insta">
+            <i class="fa-brands fa-instagram"></i>
+          </div>
+        </div>
+
+        <div class="footer__help">
+          <h2 class="footer__help__h2">Help & Infomation</h2>
+
+          <ul class="footer__help__ul">
+            <li class="footer__help__ul_li">
+              <a href="">About Us</a>
+            </li>
+            <li class="footer__help__ul_li">
+              <a href="">Privacy Policy</a>
+            </li>
+            <li class="footer__help__ul_li">
+              <a href="">Terms & Conditions</a>
+            </li>
+            <li class="footer__help__ul_li">
+              <a href="">Products Return</a>
+            </li>
+            <li class="footer__help__ul_li">
+              <a href="">Wholesale Policy</a>
+            </li>
+          </ul>
+        </div>
+      </footer>
       
     </div>
     <script src="js/app.js"></script>
