--- a/src/index.html
+++ b/src/index.html
@@ -378,25 +378,89 @@
         </div>
 
         <div class="footer__help">
-          <h2 class="footer__help__h2">Help & Infomation</h2>
+          <div class="footer__help__first">
+            <h2 class="footer__help__first__h2">Help & Infomation</h2>
 
-          <ul class="footer__help__ul">
-            <li class="footer__help__ul_li">
-              <a href="">About Us</a>
-            </li>
-            <li class="footer__help__ul_li">
-              <a href="">Privacy Policy</a>
-            </li>
-            <li class="footer__help__ul_li">
-              <a href="">Terms & Conditions</a>
-            </li>
-            <li class="footer__help__ul_li">
-              <a href="">Products Return</a>
-            </li>
-            <li class="footer__help__ul_li">
-              <a href="">Wholesale Policy</a>
-            </li>
-          </ul>
+            <div class="footer__help__first__empty"></div>
+
+            <ul class="footer__help__first__ul">
+              <li class="footer__help__first__ul__li">
+                <a class="footer__help__first__ul__li_link" href="">About Us</a>
+              </li>
+              <li class="footer__help__first__ul__li">
+                <a class="footer__help__first__ul__li_link" href="">Privacy Policy</a>
+              </li>
+              <li class="footer__help__first__ul__li">
+                <a class="footer__help__first__ul__li_link" href="">Terms & Conditions</a>
+              </li>
+              <li class="footer__help__first__ul__li">
+                <a class="footer__help__first__ul__li_link" href="">Products Return</a>
+              </li>
+              <li class="footer__help__first__ul__li">
+                <a class="footer__help__first__ul__li_link" href="">Wholesale Policy</a>
+              </li>
+            </ul>
+          </div>
+
+
+          <div class="footer__help__second">
+            <h2 class="footer__help__second__h2">Help & Infomation</h2>
+
+            <div class="footer__help__second__empty"></div>
+
+            <ul class="footer__help__second__ul">
+              <li class="footer__help__second__ul__li">
+                <a class="footer__help__second__ul__li_link" href="">About Us</a>
+              </li>
+              <li class="footer__help__second__ul__li">
+                <a class="footer__help__second__ul__li_link" href="">Privacy Policy</a>
+              </li>
+              <li class="footer__help__second__ul__li">
+                <a class="footer__help__second__ul__li_link" href="">Terms & Conditions</a>
+              </li>
+              <li class="footer__help__second__ul__li">
+                <a class="footer__help__second__ul__li_link" href="">Products Return</a>
+              </li>
+              <li class="footer__help__second__ul__li">
+                <a class="footer__help__second__ul__li_link" href="">Wholesale Policy</a>
+              </li>
+            </ul>
+          </div>
+
+
+          <div class="footer__help__third">
+            <h2 class="footer__help__third__h2">Help & Infomation</h2>
+
+            <div class="footer__help__third__empty"></div>
+
+            <ul class="footer__help__third__ul">
+              <li class="footer__help__third__ul__li">
+                <a class="footer__help__third__ul__li_link" href="">About Us</a>
+              </li>
+              <li class="footer__help__third__ul__li">
+                <a class="footer__help__third__ul__li_link" href="">Privacy Policy</a>
+              </li>
+              <li class="footer__help__third__ul__li">
+                <a class="footer__help__third__ul__li_link" href="">Terms & Conditions</a>
+              </li>
+              <li class="footer__help__third__ul__li">
+                <a class="footer__help__third__ul__li_link" href="">Products Return</a>
+              </li>
+              <li class="footer__help__third__ul__li">
+                <a class="footer__help__third__ul__li_link" href="">Wholesale Policy</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="footer__line"></div>
+
+        <div class="footer__copyright">
+          <p class="footer__copyright_p">Copyright 2020 | FoodryStore By <a class="footer__copyright_team" href="#">EngoTheme.</a> Powered by Shopify.</p>
+          
+          <div class="footer__copyright__box">
+            <img class="footer__copyright__box_img" src="i/pay.png" alt="">
+          </div>
         </div>
       </footer>
       
