--- a/src/index.html
+++ b/src/index.html
@@ -31,19 +31,20 @@
 
       <main class="main">
         <!-- deals -->
-        <div class="deals">
-          <div class="deals__first-p">
-            <p class="deals__text">don't miss today's featured deals</p>
+        <div class="deals__position">
+          <div class="deals">
+            <div class="deals__first-p">
+              <p class="deals__first-p_text">don't miss today's featured deals</p>
+            </div>
+            <div class="deals__h1">
+              <h1 class="deals__title">Best Burger  & Delicious</h1>
+            </div>
+            <div class="deals__second-p">
+              <p class="deals__second-p_text">Here to bring your life style to the next level.</p>
+            </div>
+            <button class="deals__btn"><a class="deals__btn__text" href="#">shop now</a></button>
           </div>
-          <div class="deals__h1">
-            <h1 class="deals__text">Best Burger  & Delicious</h1>
-          </div>
-          <div class="deals__second-p">
-            <p class="deals__text">Here to bring your life style to the next level.</p>
-          </div>
-          <button class="deals__btn"><a class="deals__btn__text" href="#">shop now</a></button>
         </div>
-
         <!-- advatages -->
         <div class="advantages">
           <div class="advantages__first flex">
