--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
               <div class="header-for-992px__right">
                 <img src="svg/search.svg" alt="" class="header-for-992px__right__img">
                 <img src="svg/person.svg" alt="" class="header-for-992px__right__img">
-                <img src="svg/.svg" alt="" class="header-for-992px__right__img">
+                <img src="svg/like.svg" alt="" class="header-for-992px__right__img">
                 <img src="svg/bag.svg" alt="" class="header-for-992px__right__img">
               </div>
             </div>
@@ -135,7 +135,9 @@
           <h2 class="new-arrives__h2">New Arrives</h2>
             <div class="new-arrives__product__first">
               <figure class="new-arrives__product__first__figure">
-                <img src="i/potato.jpg" class="new-arrives__product__first__figure_img">
+                <div class="hidden">
+                  <img src="i/potato.jpg" class="new-arrives__product__first__figure_img">
+                </div>
                 <div class="new-arrives__product__first__figure_sale">
                   <span>Sale</span>
                 </div>
@@ -176,7 +178,9 @@
             <!-- second -->
             <div class="new-arrives__product__second">
               <figure class="new-arrives__product__second__figure">
-                <img src="i/burger.jpg" class="new-arrives__product__second__figure_img">
+                <div class="hidden">
+                  <img src="i/burger.jpg" class="new-arrives__product__second__figure_img">
+                </div>
                 <div class="new-arrives__product__second__figure_sale">
                   <span>Sale</span>
                 </div>
@@ -214,9 +218,11 @@
               </figure>
             </div>
 
-            <!-- <div class="new-arrives__product__third close">
+            <div class="new-arrives__product__third close">
               <figure class="new-arrives__product__third__figure">
-                <img src="i/burger.jpg" class="new-arrives__product__third__figure_img">
+                <div class="hidden">
+                  <img src="i/burger.jpg" class="new-arrives__product__third__figure_img">
+                </div>
                 <div class="new-arrives__product__third__figure_sale">
                   <span>Sale</span>
                 </div>
@@ -252,11 +258,52 @@
                   </p>
                 </figcaption>
               </figure>
-            </div> -->
+            </div>
 
 
-
-            <div class="new-arrives__product__fourth close">4</div>
+            <div class="new-arrives__product__fourth close">
+              <div class="new-arrives__product__fourth close">
+                <figure class="new-arrives__product__fourth__figure">
+                  <div class="hidden">
+                    <img src="i/burger.jpg" class="new-arrives__product__fourth__figure_img">
+                  </div>
+                  <div class="new-arrives__product__fourth__figure_sale">
+                    <span>Sale</span>
+                  </div>
+                  <div class="new-arrives__product__fourth__figure__time">
+                    <ul class="new-arrives__product__fourth__figure__time__ul">
+                      
+                        <li class="new-arrives__product__fourth__figure__time__ul_li">
+                          <p>00</p>
+                          <p>Days</p>
+                        </li>
+                        <li class="new-arrives__product__fourth__figure__time__ul_li">
+                          <p>00</p>
+                          <p>Hours</p>
+                        </li>
+                        <li class="new-arrives__product__fourth__figure__time__ul_li">
+                          <p>00</p>
+                          <p>Mins</p>
+                        </li>
+                        <li class="new-arrives__product__fourth__figure__time__ul_li">
+                          <p>00</p>
+                          <p>Sec</p>
+                        </li>
+                      
+                    </ul>
+                  </div>
+                  <figcaption>
+                    <div class="new-arrives__product__fourth__link-box">
+                      <a class="new-arrives__product__fourth__link-box_a" href="#">French fries</a>
+                    </div>
+                    <p class="new-arrives__product__fourth__p">
+                      <span class="new-arrives__product__fourth__price">$18.00</span>
+                      <span class="new-arrives__product__fourth__price-old">$19.00</span>
+                    </p>
+                  </figcaption>
+                </figure>
+              </div>
+            </div>
             <div class="new-arrives__product__fifth close">5</div>
           </div>
           <!-- veggie pizza -->
@@ -275,10 +322,10 @@
             <h2 class="propose__h2">New Product</h2>
             <!-- first -->
             <figure class="propose__figure__first">
-              <img class="propose__figure__first_img" src="i/pizza-first.jpg" alt="">
+              <img class="propose__figure__first_img" src="i/firstpizza.jpg" alt="">
               <figcaption class="propose__figcaption__first">
                 <div class="propose__figcaption__first__name-box">
-                  <a class="propose__figcaption__first__name-box_a" href="#">French fries</a>
+                  <a class="propose__figcaption__first__name-box_a" href="#">Pizza</a>
                 </div>
                 <p class="propose__figcaption__first__p">
                   <span class="propose__figcaption__first__p_price">$18.00</span>
@@ -288,10 +335,10 @@
 
             <!-- second -->
             <figure class="propose__figure__second">
-              <img class="propose__figure__second_img" src="i/pizza-first.jpg" alt="">
+              <img class="propose__figure__second_img" src="i/taco.jpg" alt="">
               <figcaption class="propose__figcaption__second">
                 <div class="propose__figcaption__second__name-box">
-                  <a class="propose__figcaption__second__name-box_a" href="#">French fries</a>
+                  <a class="propose__figcaption__second__name-box_a" href="#">The Deli Taco Soft</a>
                 </div>
                 <p class="propose__figcaption__second__p">
                   <span class="propose__figcaption__second__p_price-old">$19.00</span>
@@ -302,10 +349,10 @@
 
             <!-- third -->
             <figure class="propose__figure__third">
-              <img class="propose__figure__third_img" src="i/pizza-first.jpg" alt="">
+              <img class="propose__figure__third_img" src="i/fr.jpg" alt="">
               <figcaption class="propose__figcaption__third">
                 <div class="propose__figcaption__third__name-box">
-                  <a class="propose__figcaption__third__name-box_a" href="#">French fries</a>
+                  <a class="propose__figcaption__third__name-box_a" href="#">French Fries Video</a>
                 </div>
                 <p class="propose__figcaption__third__p">
                   <span class="propose__figcaption__third__p_price">$18.00</span>
@@ -316,10 +363,10 @@
             <!-- fourth -->
 
             <figure class="propose__figure__fourth">
-              <img class="propose__figure__fourth_img" src="i/pizza-first.jpg" alt="">
+              <img class="propose__figure__fourth_img" src="i/bburger.jpg" alt="">
               <figcaption class="propose__figcaption__fourth">
                 <div class="propose__figcaption__fourth__name-box">
-                  <a class="propose__figcaption__fourth__name-box_a" href="#">French fries</a>
+                  <a class="propose__figcaption__fourth__name-box_a" href="#">Double Classic Burger</a>
                 </div>
                 <p class="propose__figcaption__fourth__p">
                   <span class="propose__figcaption__fourth__p_price">$18.00</span>
@@ -329,7 +376,7 @@
 
             <!-- fifth -->
             <figure class="propose__figure__fifth">
-              <img class="propose__figure__fifth_img" src="i/pizza-first.jpg" alt="">
+              <img class="propose__figure__fifth_img" src="i/frenchfr.jpg" alt="">
               <figcaption class="propose__figcaption__fifth">
                 <div class="propose__figcaption__fifth__name-box">
                   <a class="propose__figcaption__fifth__name-box_a" href="#">French fries</a>
@@ -342,10 +389,10 @@
 
             <!-- sixth -->
             <figure class="propose__figure__sixth">
-              <img class="propose__figure__sixth_img" src="i/pizza-first.jpg" alt="">
+              <img class="propose__figure__sixth_img" src="i/nagets.jpg" alt="">
               <figcaption class="propose__figcaption__sixth">
                 <div class="propose__figcaption__sixth__name-box">
-                  <a class="propose__figcaption__sixth__name-box_a" href="#">French fries</a>
+                  <a class="propose__figcaption__sixth__name-box_a" href="#">Fried Chicken</a>
                 </div>
                 <p class="propose__figcaption__sixth__p">
                   <span class="propose__figcaption__sixth__p_price-old">$19.00</span>
@@ -359,7 +406,7 @@
               <img class="propose__figure__seventh_img" src="i/pizza-first.jpg" alt="">
               <figcaption class="propose__figcaption__seventh">
                 <div class="propose__figcaption__seventh__name-box">
-                  <a class="propose__figcaption__seventh__name-box_a" href="#">French fries</a>
+                  <a class="propose__figcaption__seventh__name-box_a" href="#">Pizza</a>
                 </div>
                 <p class="propose__figcaption__seventh__p">
                   <span class="propose__figcaption__seventh__p_price">$18.00</span>
@@ -369,10 +416,10 @@
 
             <!-- eight -->
             <figure class="propose__figure__eight">
-              <img class="propose__figure__eight_img" src="i/pizza-first.jpg" alt="">
+              <img class="propose__figure__eight_img" src="i/tacoone.jpg" alt="">
               <figcaption class="propose__figcaption__eight">
                 <div class="propose__figcaption__eight__name-box">
-                  <a class="propose__figcaption__eight__name-box_a" href="#">French fries</a>
+                  <a class="propose__figcaption__eight__name-box_a" href="#">The Deli Taco Crunchy</a>
                 </div>
                 <p class="propose__figcaption__eight__p">
                   <span class="propose__figcaption__eight__p_price">$18.00</span>
