--- a/src/index.html
+++ b/src/index.html
@@ -208,11 +208,11 @@
                 </div>
                 <figcaption>
                   <div class="new-arrives__product__second__link-box">
-                    <a class="new-arrives__product__second__link-box_a" href="#">French fries</a>
+                    <a class="new-arrives__product__second__link-box_a" href="#">Chese Classic Burger Boosted Sale</a>
                   </div>
                   <p class="new-arrives__product__second__p">
-                    <span class="new-arrives__product__second__price">$18.00</span>
-                    <span class="new-arrives__product__second__price-old">$19.00</span>
+                    <span class="new-arrives__product__second__price">$10.00</span>
+                    <span class="new-arrives__product__second__price-old">$15.00</span>
                   </p>
                 </figcaption>
               </figure>
@@ -221,7 +221,7 @@
             <div class="new-arrives__product__third close">
               <figure class="new-arrives__product__third__figure">
                 <div class="hidden">
-                  <img src="i/burger.jpg" class="new-arrives__product__third__figure_img">
+                  <img src="i/nagets.jpg" class="new-arrives__product__third__figure_img">
                 </div>
                 <div class="new-arrives__product__third__figure_sale">
                   <span>Sale</span>
@@ -250,11 +250,11 @@
                 </div>
                 <figcaption>
                   <div class="new-arrives__product__third__link-box">
-                    <a class="new-arrives__product__third__link-box_a" href="#">French fries</a>
+                    <a class="new-arrives__product__third__link-box_a" href="#">Fried chicken</a>
                   </div>
                   <p class="new-arrives__product__third__p">
-                    <span class="new-arrives__product__third__price">$18.00</span>
-                    <span class="new-arrives__product__third__price-old">$19.00</span>
+                    <span class="new-arrives__product__third__price">$19.00</span>
+                    <span class="new-arrives__product__third__price-old">$20.00</span>
                   </p>
                 </figcaption>
               </figure>
@@ -265,7 +265,7 @@
               <div class="new-arrives__product__fourth close">
                 <figure class="new-arrives__product__fourth__figure">
                   <div class="hidden">
-                    <img src="i/burger.jpg" class="new-arrives__product__fourth__figure_img">
+                    <img src="i/taco.jpg" class="new-arrives__product__fourth__figure_img">
                   </div>
                   <div class="new-arrives__product__fourth__figure_sale">
                     <span>Sale</span>
@@ -294,11 +294,11 @@
                   </div>
                   <figcaption>
                     <div class="new-arrives__product__fourth__link-box">
-                      <a class="new-arrives__product__fourth__link-box_a" href="#">French fries</a>
+                      <a class="new-arrives__product__fourth__link-box_a" href="#">The Deli Taco Soft</a>
                     </div>
                     <p class="new-arrives__product__fourth__p">
-                      <span class="new-arrives__product__fourth__price">$18.00</span>
-                      <span class="new-arrives__product__fourth__price-old">$19.00</span>
+                      <span class="new-arrives__product__fourth__price">$15.00</span>
+                      <span class="new-arrives__product__fourth__price-old">$18.00</span>
                     </p>
                   </figcaption>
                 </figure>
