--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="container">
-      <header class="header">
+      <header id="header-scroll320px" class="header">
         <!-- menu  -->
         <div class="top-menu">
           <div class="top-menu__left">
@@ -33,7 +33,7 @@
         
         <!-- deals -->
         <div class="deals__position">
-          <header class="header-for-992px">
+          <header id="header-scroll" class="header-for-992px">
             <div class="header-for-992px__container">
               <nav class="header-for-992px__nav">
                 <ul class="header-for-992px__nav__ul">
@@ -596,31 +596,7 @@
     <script src="js/jquery.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/app.js"></script>
-    <script>
-     /*  const settings = {
-        arrows: false,
-        slidesToShow: 3,
-        slidesToScroll: 1,
-        autoplay: true,
-        speed: 1000,
-        responsive : [
-          {
-            breakpoint: 992,
-            settings : {
-              slidesToShow: 2
-            }
-          },
-          {
-            breakpoint: 600,
-            settings : {
-              slidesToShow: 1
-            }
-          }
-        ]
-      }
-
-
-      $(".advantages").slick(settings); */
-    </script>
+    <script src="js/header-992px.js"></script>
+    <script src="js/header-320px.js"></script>
   </body>
 </html>
