--- a/src/index.html
+++ b/src/index.html
@@ -440,37 +440,100 @@
           <div class="instagram">
             <h2 class="instagram__h2">Instagram</h2>
             <div class="instagram__box-img">
+              
               <img class="instagram__box-img_i" src="i/instagram1.jpg" alt="">
+              <div class="instagram__box-img__text-before">
+                <div class="instagram__box-img__text">
+                  <i class="fa-brands fa-instagram instagram__box-img__text_icon"></i>
+                  <span class="instagram__box-img__text_title">Shop It</span>
+                </div>
+              </div>
             </div>
+
             <div class="instagram__box-img">
               <img class="instagram__box-img_i" src="i/instagram2.jpg" alt="">
+              <div class="instagram__box-img__text-before">
+                <div class="instagram__box-img__text">
+                  <i class="fa-brands fa-instagram instagram__box-img__text_icon"></i>
+                  <span class="instagram__box-img__text_title">Shop It</span>
+                </div>
+              </div>
             </div>
+
             <div class="instagram__box-img">
               <img class="instagram__box-img_i" src="i/instagram3.jpg" alt="">
+              <div class="instagram__box-img__text-before">
+                <div class="instagram__box-img__text">
+                  <i class="fa-brands fa-instagram instagram__box-img__text_icon"></i>
+                  <span class="instagram__box-img__text_title">Shop It</span>
+                </div>
+              </div>
             </div>
 
             <div class="instagram__box-img">
               <img class="instagram__box-img_i" src="i/instagram4.jpg" alt="">
+              <div class="instagram__box-img__text-before">
+                <div class="instagram__box-img__text">
+                  <i class="fa-brands fa-instagram instagram__box-img__text_icon"></i>
+                  <span class="instagram__box-img__text_title">Shop It</span>
+                </div>
+              </div>
             </div>
             <div class="instagram__box-img">
               <img class="instagram__box-img_i" src="i/instagram5.jpg" alt="">
+              <div class="instagram__box-img__text-before">
+                <div class="instagram__box-img__text">
+                  <i class="fa-brands fa-instagram instagram__box-img__text_icon"></i>
+                  <span class="instagram__box-img__text_title">Shop It</span>
+                </div>
+              </div>
             </div>
             <div class="instagram__box-img">
               <img class="instagram__box-img_i" src="i/instagram6.jpg" alt="">
+              <div class="instagram__box-img__text-before">
+                <div class="instagram__box-img__text">
+                  <i class="fa-brands fa-instagram instagram__box-img__text_icon"></i>
+                  <span class="instagram__box-img__text_title">Shop It</span>
+                </div>
+              </div>
             </div>
 
             <div class="instagram__box-img">
               <img class="instagram__box-img_i" src="i/instagram7.jpg" alt="">
+              <div class="instagram__box-img__text-before">
+                <div class="instagram__box-img__text">
+                  <i class="fa-brands fa-instagram instagram__box-img__text_icon"></i>
+                  <span class="instagram__box-img__text_title">Shop It</span>
+                </div>
+              </div>
             </div>
             <div class="instagram__box-img">
               <img class="instagram__box-img_i" src="i/instagram8.jpg" alt="">
+              <div class="instagram__box-img__text-before">
+                <div class="instagram__box-img__text">
+                  <i class="fa-brands fa-instagram instagram__box-img__text_icon"></i>
+                  <span class="instagram__box-img__text_title">Shop It</span>
+                </div>
+              </div>
             </div>
             <div class="instagram__box-img">
               <img class="instagram__box-img_i" src="i/instagram9.jpg" alt="">
+              <div class="instagram__box-img__text-before">
+                <div class="instagram__box-img__text">
+                  <i class="fa-brands fa-instagram instagram__box-img__text_icon"></i>
+                  <span class="instagram__box-img__text_title">Shop It</span>
+                </div>
+              </div>
             </div>
 
             <div class="instagram__box-img">
               <img class="instagram__box-img_i" src="i/instagram10.jpg" alt="">
+              <div class="instagram__box-img__text-before">
+                <div class="instagram__box-img__text">
+                  <i class="fa-brands fa-instagram instagram__box-img__text_icon"></i>
+                  <span class="instagram__box-img__text_title">Shop It</span>
+                </div>
+              </div>
             </div>
           </div>
       </main>
