--- a/src/index.html
+++ b/src/index.html
@@ -680,8 +680,8 @@
     <script src="js/header-320px.js"></script>
     <script src="js/nav.js"></script>
     <script>
-      document.querySelector(".header-for-992px__nav__ul").onclick = function(event){
-        console.log(event);
+      document.getElementById("nav-main-ul").onmouseover = function(event){
+
       }
     </script>
   </body>
