--- a/src/index.html
+++ b/src/index.html
@@ -301,8 +301,8 @@
             </div>
 
 
-            <div class="new-arrives__product__fourth close">
-              <div class="new-arrives__product__fourth close">
+            <div class="new-arrives__product__fourth">
+              <div class="new-arrives__product__fourth">
                 <figure class="new-arrives__product__fourth__figure">
                   <div class="hidden">
                     <img src="i/taco.jpg" class="new-arrives__product__fourth__figure_img">
