--- a/src/index.html
+++ b/src/index.html
@@ -78,10 +78,35 @@
 
               <div class="header-for-992px__right">
                 <img class="header-for-992px__right_img" src="svg/search_white.svg" alt="">
-                <img class="header-for-992px__right_img" src="svg/person.svg" alt="">
+                <img class="header-for-992px__right_img pop-up-login_img" id="open-pop-up-login" src="svg/person.svg" alt="">
                 <img class="header-for-992px__right_img" src="svg/like.svg" alt="">
                 <img class="header-for-992px__right_img" src="svg/bag_white.svg" alt="">
-
+              </div>
+              <div class="pop-up-login" id="pop-up-login-container">
+                <div class="pop-up-login__container">
+                  <div class="pop-up-login__container__main">
+                    <div class="pop-up-login__container__main__image">
+                      <img src="svg/fodry.svg" alt="">
+                      <div class="pop-up-login__container__main__image_line"></div>
+                    </div>
+                    <h2 class="pop-up-login__container__main__h2">Great to have you back!</h2>
+                    <form action="" class="pop-up-login__container__main__form">
+                      <input type="text" placeholder="Email" class="pop-up-login__container__main__form__input">
+                      <input type="password" placeholder="Password" class="pop-up-login__container__main__form__input">
+                      <a class="pop-up-login__container__main__form__forgot" href="#">Forgot your password?</a>
+                      <button class="pop-up-login__container__main__form__btn">
+                        <a href="#" class="pop-up-login__container__main__form__btn_a">Login</a>
+                      </button>
+                    </form>
+                    <div class="pop-up-login__container__main__register">
+                      <span class="pop-up-login__container__main__register__dont">Don't have an account?</span>
+                      <a class="pop-up-login__container__main__register__now" href="#">Register Now</a>
+                    </div>
+                    <div class="pop-up-login__container__main__close">
+                      
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </header>          
@@ -843,5 +868,6 @@
     <script src="js/nav.js"></script>
     <script src="js/slider_advantages.js"></script>
     <script src="js/slick_new-arrives.js"></script>
+    <script src="js/popup_login.js"></script>
   </body>
 </html>
